--- a/ui-challenge/style.css
+++ b/ui-challenge/style.css
@@ -103,10 +103,6 @@ body {
 
 .card .info a {
   opacity: 0;
-  color: inherit;
-  text-decoration: none;
-  color: #00dbff;
-  font-weight: 400;
   display: flex;
   gap: 3px;
   align-items: center;
@@ -114,6 +110,36 @@ body {
 
 .card:hover .info a {
   opacity: 1;
+}
+
+a{
+  color: inherit;
+  text-decoration: none;
+  color: #00dbff;
+  font-weight: 400;
+}
+
+/* Single.Html */
+
+.wrapper{
+  height: 50%;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+}
+
+.details{
+  font-weight: 500;
+  font-size: 1rem;
+  background-color: rgb(0, 29, 54);
+  color: aliceblue;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.imageContainer{
+  height: 10%;
 }
 
 /* Tablet mode */
