--- a/ui-challenge/style.css
+++ b/ui-challenge/style.css
@@ -75,12 +75,13 @@ body {
 
 .card .info h1 {
   width: 50%;
-  font-size: 1.5em;
+  font-size: 1.8em;
 }
 
 .card .info p {
   transform: translateY(20px);
   font-weight: 200;
+  color: #fee
 }
 
 .card:hover .info p {
